Solid Foundation. Removed a lot of unnecessary code, but some may still remain along with [todo] comments