@@ -33,7 +33,7 @@ public class GameField extends Pane
     public GameField()
     {
         // start player in center of field
-        player = new Snake(0, 6);
+        player = new Snake(12, 9);
 
         food = new Food();
         generateFood();
@@ -42,60 +42,43 @@ public class GameField extends Pane
         setBackground(new Background(new BackgroundFill(new Color(.95,.95,.95,1), new CornerRadii(0), new Insets(0))));
         
         // add player to field
-        for(int i = 0; i < player.getTail().size(); i++)
-            getChildren().add(player.getTail().get(i));
+        getChildren().add(player.getFirst());
         
-        frameTimer = new Timeline(new KeyFrame(Duration.seconds(1.0/6.0),
+        frameTimer = new Timeline(new KeyFrame(Duration.seconds(1.0/8.0),
             e->updateFrame()));
         frameTimer.setCycleCount(Animation.INDEFINITE);
     }
 
     public void addPiece()
     {
-
-        ArrayList<Tail> tail = player.getTail();
-        //[add] getLastPiece and getFirstPiece methods to Snake class
-        //[remove] what is lastPiece even being used for????
-        Tail lastPiece = tail.get(tail.size() - 1).copy();
-        //[change] is move even that necessary???
-        Move move = new Move(lastPiece.x, lastPiece.y, lastPiece.direction);
-        Direction direction = move.getDirection();
-        // THIS DOESN'T WORK IF HEAD PIECE IS IN A DIFFERENT DIRECTION THAN THE TAIL
-        // PIECE NEEDS TO DUPLICATE THE LAST PIECE'S QUEUE
-        // PASS ONLY DIRECTION TO CONSTRUCTOR, maybe not even that, just have constructor do work
-        if(direction == Direction.UP)
-            player.add(move.getX(), move.getY() + 1, direction);
-            //move.setY(move.getY() + 0); 
-        else if(direction == Direction.DOWN)
-            player.add(move.getX(), move.getY() - 1, direction);
-            //move.setY(move.getY() - 0);
-        else if(direction == Direction.LEFT)
-            player.add(move.getX() + 1, move.getY(), direction);
-            //move.setX(move.getX() + 0);
-        else if(direction == Direction.RIGHT)
-            player.add(move.getX() - 1, move.getY(), direction);
-            //move.setX(move.getX() - 0);
-
-
-        getChildren().add(tail.get(tail.size() - 1));
-
-
-        /*
-        player.add();
-        ArrayList<Tail> tail = player.getTail();
-        Tail lastPiece = tail.get(tail.size() - 1);
-        getChildren().add(lastPiece);
-        */
+        // create a copy of last piece
+        Tail piece = player.getLast().copy();
+        
+        // set new piece position according to direction copied from last piece
+        if(piece.getDirection() == Direction.N)
+            piece.setY(piece.getY() + 1);
+        else if(piece.getDirection() == Direction.S)
+            piece.setY(piece.getY() - 1);
+        else if(piece.getDirection() == Direction.E)
+            piece.setX(piece.getX() + 1);
+        else if(piece.getDirection() == Direction.W)
+            piece.setX(piece.getX() - 1);
+        
+        // add piece to player
+        player.add(piece);
+        
+        // add piece to game field
+        getChildren().add(piece);
     }
 
     public void generateFood()
     {
         boolean found = true;
-        // coordinates for food (upper limit = 39, 29) (n * 20 + 10) (800x600)
-        int x = 40;
-        int y = 30;
+        // coordinates for food (upper limit = 23, 17) (n * 20 + 10) (480x360)
+        int x = 24;
+        int y = 18;
         
-        int used = 1;
+        int tried = 1;
         
         // food generation restrictions based off of snake pieces coordinates
         ArrayList<Tail> tail = player.getTail();
@@ -103,26 +86,28 @@ public class GameField extends Pane
             
         while(found)
         {
-            used++;
+            // keep track of how many spaces the food has tried generating in
+            tried++;
             
-            if(used >= (2*6)) {
-                found = false;
-                System.out.println("YOU WON!!!!");
-                break;
-            }
+            //if(tried >= (24 * 18)) {
+            //    System.out.println("YOU WON!!!!");
+            //    break;
+            //}
             
-            x = (int)(Math.random() * 6);
-            y = (int)(Math.random() * 2);
+            // generate random coordinates for food
+            x = (int)(Math.random() * 24);
+            y = (int)(Math.random() * 18);
             
             // don't think it's possible, but just in case
-            if(x >= 40 || y >= 30) {
-                used--;
+            if(x >= 24 || y >= 18) {
+                tried--;
                 break;
             }
             
+            // prevent generating food in space occupied by snake
             for (Tail piece : tail) {
                 
-                if(x == piece.x && y == piece.y) {
+                if(x == piece.getX() && y == piece.getY()) {
                     found = true;
                     break;
                 } else {
@@ -138,43 +123,33 @@ public class GameField extends Pane
         food.setCenterX(x * 20 + 10);
         food.setCenterY(y * 20 + 10);
 
-        System.out.println("food:\nx: " + x + " y: " + y);
     }
 
     public void updateFrame()
     {
         //[add] logic for running into edges, running into self
         //[add] logic when the game is over
-        Tail head = player.getTail().get(0);
-        Move move = new Move(head.x, head.y, head.direction);
-        Direction direction = move.getDirection();
-        //if(move.getX() == food.getX() && move.getY() == food.getY()) {
-            //addPiece();
-          //  generateFood();
-        //}
-        if(head.x == food.getX() && head.y == food.getY()) {
-            //addPiece();
-            //for(int i = 0; i < 2000; i++)
-                addPiece();
+        Tail head = player.getFirst();
+        if(head.getX() == food.getX() && head.getY() == food.getY()) {
+            addPiece();
             //[add] if player.getLength() == (width / 20) * (height / 20) YOU WIN! EXIT SOMEHOW   
             generateFood();
         }
-        player.updateFrame(40, 30);
-        //System.out.println("x: " + player.getX() + " y: " + player.getY());
+        player.updateFrame();
     }
 
     public void handleKey(KeyEvent ke)
     {
         if(ke.getCode() == KeyCode.UP)
-            player.changeDirection(Direction.UP);
+            player.changeDirection(Direction.N);
         else if(ke.getCode() == KeyCode.DOWN)
-            player.changeDirection(Direction.DOWN);
+            player.changeDirection(Direction.S);
         else if(ke.getCode() == KeyCode.LEFT)
-            player.changeDirection(Direction.LEFT);
+            player.changeDirection(Direction.E);
         else if(ke.getCode() == KeyCode.RIGHT)
-            player.changeDirection(Direction.RIGHT);
-        else if(ke.getCode() == KeyCode.SPACE)
-            addPiece();
+            player.changeDirection(Direction.W);
+        else if(ke.getCode() == KeyCode.SPACE) {
+            addPiece();player.updateFrame();}
     }
 
     public void play()
